# noir-safe

./: .gitignore  Nargo.toml  README.md  noir_safe_aggregation_circuit.json
.github/workflows/: ci.yml
circuits/: Nargo.toml  Prover.toml
circuits/account-proof/: Nargo.toml  Prover.toml
circuits/account-proof/src/: main.nr
circuits/account_proof/: Nargo.toml  Prover.toml
circuits/account_proof/src/: main.nr
circuits/aggregation/: Nargo.toml  Prover.toml
circuits/aggregation/src/: main.nr
circuits/anchor/: Nargo.toml  Prover.toml  Verifier.toml
circuits/anchor/src/: main.nr
circuits/src/: constants.nr  fixture.nr  main.nr  types.nr
circuits/storage-proof/: Nargo.toml
circuits/storage-proof/src/: main.nr
circuits/storage_proof/: Nargo.toml  Prover.toml
circuits/storage_proof/src/: main.nr
circuits/utils/: Nargo.toml
circuits/utils/src/: lib.nr
contract/: UltraVerifier.sol
contract/noir_safe_aggregation_circuit/: plonk_vk.sol
lib/: Nargo.toml  constants.nr  main.nr  types.nr
prelude/: Cargo.toml  lib.rs  main.rs
scripts/: aggregate.sh  compile.sh  solidity_verifier.sh  test.sh  verifier.sh  verify.sh
scripts/aggregation-inputs/: index.js  package-lock.json  package.json
scripts/safe/: msgHash.js  package.json  proposeSignMsg.js
server/: .env  Cargo.toml  noir-safe-server.service  test.sh
server/src/: main.rs
src/: Cargo.toml  lib.rs  main.rs
