[workspace]
[package]
name = "noir-safe-server"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
const-hex = "1.11.1"
env_logger = "0.11.5"
home = "0.5.9"
log = "0.4.21"
rocket = {version = "0.5.0", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"], default-features = false }
nanoid = "0.4.0"